--- a/front/src/main.css
+++ b/front/src/main.css
@@ -24,8 +24,11 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
