--- a/sqlsampleapp/hackapp/templates/shops.html
+++ b/sqlsampleapp/hackapp/templates/shops.html
@@ -72,6 +72,10 @@
                 <input type="text" id="phone" name="phone" required>
             </div>
             <div class="form-group">
+                <label for="category">カテゴリ</label>
+                <input type="text" id="category" name="category" required>
+            </div>
+            <div class="form-group">
                 <label for="opening_time">開店時間</label>
                 <input type="time" id="opening_time" name="opening_time" required>
             </div>
