add/recomend page

--- a/sqlsampleapp/hackapp/templates/index.html
+++ b/sqlsampleapp/hackapp/templates/index.html
@@ -38,6 +38,9 @@
     <div class="text-center mt-4">
         <a href="/sign_in" class="btn btn-secondary">ログイン画面へ</a>
     </div>
+    <div class="text-center mt-4">
+        <a href="/recomend" class="btn btn-primary">現在地からおすすめのお店を探す</a>
+    </div>
 
 
 </div>
