--- a/sqlsampleapp/hackapp/templates/shops_failed.html
+++ b/sqlsampleapp/hackapp/templates/shops_failed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>店舗登録</title>
+    <title>指定されたお店は見つかりませんでした。</title>
     <style>
         body {
             font-family: Arial, sans-serif;
