掲載削除画面を作成。

--- a/back/hackapp/templates/index.html
+++ b/back/hackapp/templates/index.html
@@ -41,6 +41,9 @@
     <div class="text-center mt-4">
         <a href="/recomend" class="btn btn-primary">現在地からおすすめのお店を探す</a>
     </div>
+    <form method="POST" action="/activate_all_seats">
+        <button type="submit" class="btn btn-primary">すべての座席を有効化</button>
+    </form>
 
 
 </div>
