サインインページをreactで実装

--- a/back/hackapp/templates/sign_in.html
+++ b/back/hackapp/templates/sign_in.html
@@ -8,7 +8,7 @@
 <body class="bg-light">
 <div class="container py-5">
     <h1 class="mb-4 text-center">ログイン画面！！</h1>
-    <form action="/signed_in" method="POST">
+    <form action="/debug_signed_in" method="POST">
         <div class="mb-3">
             <label class="form-label">登録メールアドレス</label>
             <input type="email" class="form-control" name="email">
