--- a/front/src/MatchingPage.css
+++ b/front/src/MatchingPage.css
@@ -11,6 +11,7 @@
 .card {
   width: 400px;
   height: 600px; /* 高さを固定 */
+  min-height: 550px;
   border: 1px solid #ccc;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -30,13 +31,13 @@
   justify-content: center;
   align-items: center;
   width: 95%;
+  height: auto;
   margin: 10px auto;
 }
 
 /* 画像 */
 .card-image {
   width: 100%;
-  height: 200px;
   object-fit: cover;
 }
 
