--- a/front/src/OwnerDashboard.css
+++ b/front/src/OwnerDashboard.css
@@ -1,8 +1,15 @@
-.btn-add-shop {
+.btn-add-shop, .btn-add-seat {
   margin: 1rem 0 1rem auto;
   background-color: #ff8c00;
   border-radius: 5px;
   color: white;
+  border: none;
+}
+
+.btn-add-shop:hover, .btn-add-seat:hover {
+  background-color: #ffa733;
+  color: white;
+  border: none;
 }
 
 .list-group-item {
