--- a/front/src/SeatRegisterPage.css
+++ b/front/src/SeatRegisterPage.css
@@ -56,7 +56,9 @@
     background-color: #FF8C00;
     border: none;
     border-radius: 12px;
-    padding: 16px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 8px;
     font-size: 1.2rem;
     font-weight: 600;
     color: white;
